[package]
name = "re2script"
version = "0.1.0"
authors = ["descawed <re2script@descawed.com>"]
edition = "2024"
repository = "https://github.com/descawed/re2script"

[dependencies]
anyhow = "1.0.98"
chumsky = "1.0.0-alpha.8"
clap = { version = "4.5.40", features = ["derive"] }
num_enum = "0.7.3"
residat = { git = "https://github.com/descawed/residat.git", branch = "master" }